bootstrap support added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <input id="myFile" name="myFile" type="file" accept="image/*">
 
-<script src="app.js" ></script>
+<script src="js/app.js" ></script>
 
 </body>
 </html>
