--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 <script src="js/app.js" ></script>
 
 <img src="" id="preview">
+<img src="" id="preview2">
 
-<button onclick="processRequest()">Get result!</button>
+<button onclick="processRequest()" type="button" class="btn btn-success">Get result!</button>
+
+<textarea id="pictext"></textarea>
 
 </body>
 </html>
