--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 <html>
 <head>
     <title></title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 
-<input id="myFile" name="myFile" type="file" accept="image/*">
+<input class="alert" id="myFile" name="myFile" type="file" accept="image/*">
 
 <script src="js/app.js" ></script>
 
