--- a/index.html
+++ b/index.html
@@ -10,19 +10,27 @@
 
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </head>
 <body>
 
-<input class="alert" id="myFile" name="myFile" type="file" accept="image/*">
+<div class="row text-center">
+    <input class="text-center" id="myFile" name="myFile" type="file" accept="image/*">
+</div>
 
 <script src="js/app.js" ></script>
-
 <img src="" id="preview">
 <img src="" id="preview2">
 
-<button onclick="processRequest()" type="button" class="btn btn-success">Get result!</button>
 
-<textarea id="pictext"></textarea>
+<div class="row text-center">
+    <button onclick="processRequest()" type="button" class="btn btn-success">Get result!</button>
+</div>
+
+<div class="row text-center">
+    <textarea id="pictext"></textarea>
+</div>
+
 
 </body>
 </html>
