--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+    <style type="text/css">
+        textarea {
+            font-size: 20pt;
+            font-family: "Courier New";
+        }
+    </style>
 </head>
 <body>
 
