Adding examples of proper symbols

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     <style type="text/css">
         textarea {
-            font-size: 20pt;
-            font-family: "Courier New";
+            font-size: 5pt;
+            font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
         }
     </style>
 </head>
