Better text output

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 <div class="row text-center">
     <textarea id="pictext"></textarea>
 </div>
-
+<div class="row text-center">
+    <div id="output"></div>
+</div>
 
 </body>
 </html>
